--- a/components/Loader/Loader.module.scss
+++ b/components/Loader/Loader.module.scss
@@ -1,56 +1,51 @@
-.ldsellipsis {
-  z-index: 9000;
+.loader {
+  :root[data-joy-color-scheme='light'] & {
+    border-color: black;
+  }
+  :root[data-joy-color-scheme='dark'] & {
+    border-color: white;
+  }
+  width: 28px;
+  height: 28px;
+  border: 3px dotted;
+  border-style: solid solid dotted dotted;
+  border-radius: 50%;
   display: inline-block;
   position: relative;
-  width: 80px;
-  height: 80px;
+  box-sizing: border-box;
+  animation: rotation 2s linear infinite;
 }
-.ldsellipsis div {
+.loader::after {
+  content: '';  
+  box-sizing: border-box;
   position: absolute;
-  top: 33px;
-  width: 13px;
-  height: 13px;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  border: 2px dotted #CC0033;
+  border-style: solid solid dotted;
+  width: 18px;
+  height: 18px;
   border-radius: 50%;
-  background: black;
-  animation-timing-function: cubic-bezier(0, 1, 1, 0);
+  animation: rotationBack 1s linear infinite;
+  transform-origin: center center;
 }
-.ldsellipsis div:nth-child(1) {
-  left: 8px;
-  animation: ldsellipsis1 0.6s infinite;
-}
-.ldsellipsis div:nth-child(2) {
-  left: 8px;
-  animation: ldsellipsis2 0.6s infinite;
-}
-.ldsellipsis div:nth-child(3) {
-  left: 32px;
-  animation: ldsellipsis2 0.6s infinite;
-}
-.ldsellipsis div:nth-child(4) {
-  left: 56px;
-  animation: ldsellipsis3 0.6s infinite;
-}
-@keyframes ldsellipsis1 {
+    
+@keyframes rotation {
   0% {
-    transform: scale(0);
+    transform: rotate(0deg);
   }
   100% {
-    transform: scale(1);
+    transform: rotate(360deg);
   }
-}
-@keyframes ldsellipsis3 {
+} 
+@keyframes rotationBack {
   0% {
-    transform: scale(1);
+    transform: rotate(0deg);
   }
   100% {
-    transform: scale(0);
+    transform: rotate(-360deg);
   }
-}
-@keyframes ldsellipsis2 {
-  0% {
-    transform: translate(0, 0);
-  }
-  100% {
-    transform: translate(24px, 0);
-  }
-}
+} 
